--- a/template/index.html
+++ b/template/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ name }}</title>
+    <link rel="stylesheet" type="text/css" href="static/pure-nr-min.css">
   </head>
   <body>
     <div id="app"></div>
